User country at signup

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -354,6 +354,6 @@
   "data.title": "Statistics",
   "data.home": "Dashboard",
   "data.user": "Users",
-  "settings.country-warning.message": "Help us improve the results of the polls and tell us more about you.",
-  "settings.country-warning.link": "Go to your profile"
+  "settings.country-warning.message": "Help us improve the platform.",
+  "settings.country-warning.link": "Please complete your profile."
 }
