--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -21,6 +21,7 @@
   "admin-tags.list.search.placeholder": "Rechercher une étiquette ...",
   "admin-tags.list.title": "Étiquettes du système",
   "admin-topics-form.alert.no-tags": "Aucune étiquette n'a été trouvée, merci d'en créer une avant de commencer à créer une loi",
+  "admin-topics-form.alert.no-tags.no-staff": "",
   "admin-topics-form.button.add-clause": "Nouvel article",
   "admin-topics-form.button.add-link": "Ajouter un lien",
   "admin-topics-form.button.make-private": "Dépublier",
@@ -151,7 +152,19 @@
   "forgot.reset": "Réinitialiser votre mot de passe !",
   "form.please-wait": "S'il vous plaît, attendez",
   "form.send": "Envoyer",
+  "forum.form.create.submit": "",
+  "forum.form.summary.label": "",
+  "forum.form.summary.placeholder": "",
+  "forum.form.title": "",
+  "forum.form.title.label": "",
+  "forum.form.title.placeholder": "",
+  "forum.form.url.label": "",
+  "forum.form.url.unavailable": "",
+  "forum.status.creating": "",
+  "forum.status.destroying": "",
+  "forum.status.error": "",
   "header.admin": "Gérer",
+  "header.forums": "",
   "header.logout": "Déconnexion",
   "header.settings": "Configuration",
   "header.signin": "Se connecter",
@@ -188,7 +201,16 @@
   "markdown.url-autolinking.text.3": "Par exemple, pour créer un lien vers http://www.example.com, avec un texte de lien qui dit : Entrez à Exemple.com !, vous écririez ceci :",
   "markdown.url-autolinking.title": "Lien",
   "markdown.will.become": "Deviendra : ",
+  "newsfeed.button.load-more": "",
+  "newsfeed.call-to-action.manage-forums": "",
+  "newsfeed.call-to-action.start-a-forum": "",
+  "newsfeed.nothing-to-show": "",
+  "newsfeed.title": "",
+  "newsfeed.welcome.body": "",
+  "newsfeed.welcome.join": "",
+  "newsfeed.welcome.title": "",
   "notifications.error": "Impossible de se connecter au moteur de notifications",
+  "notifications.error.connection-refused": "",
   "password": "Mot de passe",
   "password.new": "Nouveau mot de passe",
   "password.repeat": "Retaper le mot de passe",
@@ -213,6 +235,10 @@
   "proposal-options.votes-cast": "{num} votes comptés",
   "proposal-options.yea": "Affirmatif",
   "resend-validation-email-form.error.email-not-valid.no-link": "L'adresse e-mail pour cet utilisateur est pas validé. Nous envoyons un email de bienvenue utilisateurs lors de leur inscription. S'il vous plaît vérifier votre e-mail (pensez à vérifier votre dossier spam trop) et cliquez sur le lien fourni dans le courriel.",
+  "settings-forums.delete.confirmation.body": "",
+  "settings-forums.delete.confirmation.button-confirm": "",
+  "settings-forums.delete.confirmation.instructions": "",
+  "settings-forums.delete.confirmation.title": "",
   "settings-notifications.no": "Non",
   "settings-notifications.yes": "Oui",
   "settings.change-at-gravatar": "Changez votre photo de profil sur gravatar.com",
@@ -229,12 +255,14 @@
   "settings.locale.fi": "Finlandais",
   "settings.locale.fr": "Français",
   "settings.locale.gl": "Galicien",
+  "settings.locale.hu": "",
   "settings.locale.it": "Italien",
   "settings.locale.nl": "Néerlandais",
   "settings.locale.pl": "Polonais",
   "settings.locale.pt": "Portugais",
   "settings.locale.ro": "Roumain",
   "settings.locale.ru": "Russe",
+  "settings.locale.sq": "",
   "settings.locale.sv": "Suédois",
   "settings.locale.uk": "Ukrainien",
   "settings.locale.zh_TW": "Chinois",
@@ -249,6 +277,7 @@
   "settings.profile": "Profil",
   "settings.save": "Enregistrer",
   "settings.sessions": "Sessions",
+  "settings.sidebar.forums": "",
   "settings.successfuly-updated": "Votre profil a été actualisé avec succès",
   "settings.title": "Paramètres",
   "side-comments.cancel": "Annuler",
@@ -271,6 +300,7 @@
   "signin.error.email-not-valid": "L'adresse e-mail pour cet utilisateur est pas validé. Nous envoyons un email de bienvenue utilisateurs lors de leur inscription. S'il vous plaît vérifier votre e-mail (pensez à vérifier votre dossier spam trop) et cliquez sur le lien fourni dans le courriel. Cliquez <a href='/signup/resend-validation-email'>ici</a> si vous avez besoin de l'email de bienvenue à être renvoyé",
   "signin.login": "S'identifier",
   "signin.login-to": "Se connecter à",
+  "signin.login-with-facebook": "",
   "signin.signup": "S'inscrire",
   "signup.accepting": "En vous inscrivant, vous acceptez notre",
   "signup.being-redirected": "Vous serez redirigé dans 5 secondes",
@@ -307,6 +337,7 @@
   "validators.invalid.author": "Auteur invalide",
   "validators.invalid.email": "Adresse de courriel invalide",
   "validators.invalid.firstname": "Prénom invalide",
+  "validators.invalid.forum": "",
   "validators.invalid.lastname": "Nom invalide",
   "validators.invalid.number": "Nombre invalide",
   "validators.invalid.time": "Heure invalide",
