add new fr translations

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -21,7 +21,7 @@
   "admin-tags.list.search.placeholder": "Rechercher une étiquette ...",
   "admin-tags.list.title": "Étiquettes du système",
   "admin-topics-form.alert.no-tags": "Aucune étiquette n'a été trouvée, merci d'en créer une avant de commencer à créer une loi",
-  "admin-topics-form.alert.no-tags.no-staff": "",
+  "admin-topics-form.alert.no-tags.no-staff": "Aucune étiquette n'a été trouvée, impossible de créer une loi",
   "admin-topics-form.button.add-clause": "Nouvel article",
   "admin-topics-form.button.add-link": "Ajouter un lien",
   "admin-topics-form.button.make-private": "Dépublier",
@@ -152,19 +152,19 @@
   "forgot.reset": "Réinitialiser votre mot de passe !",
   "form.please-wait": "S'il vous plaît, attendez",
   "form.send": "Envoyer",
-  "forum.form.create.submit": "",
-  "forum.form.summary.label": "",
-  "forum.form.summary.placeholder": "",
-  "forum.form.title": "",
-  "forum.form.title.label": "",
-  "forum.form.title.placeholder": "",
-  "forum.form.url.label": "",
-  "forum.form.url.unavailable": "",
-  "forum.status.creating": "",
-  "forum.status.destroying": "",
-  "forum.status.error": "",
+  "forum.form.create.submit": "Créer",
+  "forum.form.summary.label": "Description",
+  "forum.form.summary.placeholder": "Quel est l'objet de votre démocracie?",
+  "forum.form.title": "Créer mon DemocracyOS",
+  "forum.form.title.label": "Titre",
+  "forum.form.title.placeholder": "Le nom de votre démocracie",
+  "forum.form.url.label": "URL",
+  "forum.form.url.unavailable": "L'URL n'est pas disponible",
+  "forum.status.creating": "Création de votre démocracie",
+  "forum.status.destroying": "Suppression...",
+  "forum.status.error": "Il y a une erreur lors de l'opération, merci de recommencer plus tard.",
   "header.admin": "Gérer",
-  "header.forums": "",
+  "header.forums": "Mes Démocraties",
   "header.logout": "Déconnexion",
   "header.settings": "Configuration",
   "header.signin": "Se connecter",
@@ -198,19 +198,19 @@
   "markdown.url-autolinking.example2": "[Visitez Exemple.com !](http://www.exemple.com)",
   "markdown.url-autolinking.text": "DemocracyOS va automaiquement transformer en lien les URLs standard, donc si vous voulez faire un lien vers une URL, vous pouvez simplement entrer l'URL et elle sera transformée en un lien vers cette URL.",
   "markdown.url-autolinking.text.2": "En outre, vous pouvez créer un lien, en enveloppant le texte du lien entre crochets ( [ ] ), puis en enveloppant le lien entre parenthèses ( ( ) ).",
-  "markdown.url-autolinking.text.3": "Par exemple, pour créer un lien vers http://www.example.com, avec un texte de lien qui dit : Entrez à Exemple.com !, vous écririez ceci :",
+  "markdown.url-autolinking.text.3": "Par exemple, pour créer un lien vers http://www.example.com, avec un texte de lien qui dit ,Entrez à Exemple.com !, vous écririez ceci :",
   "markdown.url-autolinking.title": "Lien",
-  "markdown.will.become": "Deviendra : ",
-  "newsfeed.button.load-more": "",
-  "newsfeed.call-to-action.manage-forums": "",
-  "newsfeed.call-to-action.start-a-forum": "",
-  "newsfeed.nothing-to-show": "",
-  "newsfeed.title": "",
-  "newsfeed.welcome.body": "",
-  "newsfeed.welcome.join": "",
-  "newsfeed.welcome.title": "",
-  "notifications.error": "Impossible de se connecter au moteur de notifications",
-  "notifications.error.connection-refused": "",
+  "markdown.will.become": "Deviendra ,",
+  "newsfeed.button.load-more": "Charger plus",
+  "newsfeed.call-to-action.manage-forums": "Gérer mes démocracies",
+  "newsfeed.call-to-action.start-a-forum": "Créer",
+  "newsfeed.nothing-to-show": "Plus rien à afficher",
+  "newsfeed.title": "Démocracies",
+  "newsfeed.welcome.body": "En quelques clics, vous pouvez créer votre propre démocracie",
+  "newsfeed.welcome.join": "S'inscrire",
+  "newsfeed.welcome.title": "Créer votre démocracie maintenant",
+  "notifications.error": "Impossible de se connecter au moteur de notification",
+  "notifications.error.connection-refused": "Impossible de se connecter au moteur de notification",
   "password": "Mot de passe",
   "password.new": "Nouveau mot de passe",
   "password.repeat": "Retaper le mot de passe",
@@ -235,10 +235,10 @@
   "proposal-options.votes-cast": "{num} votes comptés",
   "proposal-options.yea": "Affirmatif",
   "resend-validation-email-form.error.email-not-valid.no-link": "L'adresse e-mail pour cet utilisateur est pas validé. Nous envoyons un email de bienvenue utilisateurs lors de leur inscription. S'il vous plaît vérifier votre e-mail (pensez à vérifier votre dossier spam trop) et cliquez sur le lien fourni dans le courriel.",
-  "settings-forums.delete.confirmation.body": "",
-  "settings-forums.delete.confirmation.button-confirm": "",
-  "settings-forums.delete.confirmation.instructions": "",
-  "settings-forums.delete.confirmation.title": "",
+  "settings-forums.delete.confirmation.body": "La suppression d'une démoncracie est définitive. Merci de vérifier que vous comprenez bien les conséquences de cette opération.",
+  "settings-forums.delete.confirmation.button-confirm": "Je comprends les conséquences, supprimer la démocracie",
+  "settings-forums.delete.confirmation.instructions": "Merci de saisir l'URL de votre démocracie (<strong>{domain}</strong>) pour confirmer la suppression.",
+  "settings-forums.delete.confirmation.title": "Etes-vous VRAIMENT sûr ?",
   "settings-notifications.no": "Non",
   "settings-notifications.yes": "Oui",
   "settings.change-at-gravatar": "Changez votre photo de profil sur gravatar.com",
@@ -255,14 +255,14 @@
   "settings.locale.fi": "Finlandais",
   "settings.locale.fr": "Français",
   "settings.locale.gl": "Galicien",
-  "settings.locale.hu": "",
+  "settings.locale.hu": "Hongrois",
   "settings.locale.it": "Italien",
   "settings.locale.nl": "Néerlandais",
   "settings.locale.pl": "Polonais",
   "settings.locale.pt": "Portugais",
   "settings.locale.ro": "Roumain",
   "settings.locale.ru": "Russe",
-  "settings.locale.sq": "",
+  "settings.locale.sq": "Albanais",
   "settings.locale.sv": "Suédois",
   "settings.locale.uk": "Ukrainien",
   "settings.locale.zh_TW": "Chinois",
@@ -277,7 +277,7 @@
   "settings.profile": "Profil",
   "settings.save": "Enregistrer",
   "settings.sessions": "Sessions",
-  "settings.sidebar.forums": "",
+  "settings.sidebar.forums": "Démocracies",
   "settings.successfuly-updated": "Votre profil a été actualisé avec succès",
   "settings.title": "Paramètres",
   "side-comments.cancel": "Annuler",
@@ -300,7 +300,7 @@
   "signin.error.email-not-valid": "L'adresse e-mail pour cet utilisateur est pas validé. Nous envoyons un email de bienvenue utilisateurs lors de leur inscription. S'il vous plaît vérifier votre e-mail (pensez à vérifier votre dossier spam trop) et cliquez sur le lien fourni dans le courriel. Cliquez <a href='/signup/resend-validation-email'>ici</a> si vous avez besoin de l'email de bienvenue à être renvoyé",
   "signin.login": "S'identifier",
   "signin.login-to": "Se connecter à",
-  "signin.login-with-facebook": "",
+  "signin.login-with-facebook": "Se connecter avec Facebook",
   "signin.signup": "S'inscrire",
   "signup.accepting": "En vous inscrivant, vous acceptez notre",
   "signup.being-redirected": "Vous serez redirigé dans 5 secondes",
@@ -337,7 +337,7 @@
   "validators.invalid.author": "Auteur invalide",
   "validators.invalid.email": "Adresse de courriel invalide",
   "validators.invalid.firstname": "Prénom invalide",
-  "validators.invalid.forum": "",
+  "validators.invalid.forum": "Titre invalide",
   "validators.invalid.lastname": "Nom invalide",
   "validators.invalid.number": "Nombre invalide",
   "validators.invalid.time": "Heure invalide",
